# vimgreet

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  hypercube-utils.spec  justfile  vimgreet.spec
examples/: demo.toml  onboard.toml
src/: app.rs  error.rs  lib.rs  main.rs
src/event/: handler.rs  mod.rs
src/greeter/: mod.rs  ui.rs
src/greeter/widgets/: confirm.rs  header.rs  help.rs  login_form.rs  message_panel.rs  mod.rs  picker.rs  status_bar.rs
src/ipc/: client.rs  mod.rs
src/onboard/: config.rs  error.rs  executor.rs  mod.rs  service.rs  ui.rs
src/onboard/steps/: mod.rs
src/onboard/ui/: mod.rs  network.rs  picker.rs  reboot.rs  review.rs  update.rs  user.rs  welcome.rs
src/onboard/widgets/: mod.rs  status_bar.rs
src/system/: mod.rs  power.rs  session.rs  user.rs
src/ui/: layout.rs  mod.rs  theme.rs
src/ui/widgets/: confirm.rs  header.rs  help.rs  login_form.rs  message_panel.rs  picker.rs  status_bar.rs
src/vim/: command.rs  input.rs  mod.rs  mode.rs
