[package]
name = "hypercube-utils"
version = "0.1.1"
edition = "2024"
authors = ["binarypie"]
description = "TUI utilities for Hypercube Linux"
license = "Apache-2.0"

[lib]
name = "hypercube_utils"
path = "src/lib.rs"

[[bin]]
name = "hypercube-greeter"
path = "src/bin/greeter.rs"

[[bin]]
name = "hypercube-onboard"
path = "src/bin/onboard.rs"

[dependencies]
# TUI Framework
ratatui = { version = "0.29", default-features = false, features = [
  "crossterm",
] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async Runtime
tokio = { version = "1", features = [
  "full",
  "sync",
  "macros",
  "rt-multi-thread",
] }
futures = "0.3"

# greetd IPC
greetd_ipc = { version = "0.10", features = ["sync-codec"] }

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Desktop File Parsing
rust-ini = "0.21"


# Security
zeroize = { version = "1.8", features = ["derive"] }

# Error Handling
thiserror = "2.0"

# CLI Arguments
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = "0.4"
dirs = "5.0"
hostname = "0.4"
shell-words = "1.1"
shell-escape = "0.1"
nix = { version = "0.29", features = ["user", "term"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
